--- a/src/components/TicTacToe.css
+++ b/src/components/TicTacToe.css
@@ -1,50 +1,77 @@
 .container {
     display: flex;
     flex-direction: column;
-    background-image: url(https://i.imgur.com/OVBsgc1.jpg);
-    border: 2px solid black;
-    font-family: "Indie Flower", cursive;
+    align-items: center;
+    justify-content: center;
+    background: linear-gradient(180deg, #627A96 0%, #83B5C5 19.47%, #8DC7D4 39.07%, #93D2DC 82.24%, #95D6DF 100%);
+    height: 100vh;
+    font-family: "Helvetica Neue", Helvetica, serif;
+    font-weight: 300;
+    font-size: 1.25rem;
+    color: #201238;
 }
 
-.col {
+.current-turn {
+    padding: 3rem;
+    text-transform: capitalize;
+}
+
+.board-row {
     display: flex;
 }
 
 .cell {
-    width: 89px;
-    height: 89px;
-    border: 1px solid lightgray;
-    text-align: center;
     display: flex;
+    width: 5.1rem;
+    height: 5.1rem;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    font-size: xxx-large;
+    font-family: Baskerville, serif;
+    font-size: 3rem;
     text-transform: capitalize;
     cursor: pointer;
-    color: white;
-    font-weight: 900;
+    color: #201238;
+    font-weight: 400;
 }
 
-.video_game_button {
-    text-shadow: 1px 1px pink, -1px -1px maroon;
-
-    line-height: 1.5em;
-    text-align: center;
-    display: inline-block;
-    width: 4.5em;
-    height: 4.5em;
-    border-radius: 50%;
-    background-color: red;
-    box-shadow: 0 0.2em maroon;
-    color: red;
-    margin: 5px;
-    background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);
-    cursor: pointer;
-    padding-left: 5px;
+.border-right {
+    border-right: 5px solid #7E7E7E;
 }
 
-.video_game_button:active {
-    box-shadow: none;
-    position: relative;
-    top: 0.2em;
+.border-bottom {
+    border-bottom: 5px solid #7E7E7E;
 }
+
+.border-top {
+    border-top: 5px solid #7E7E7E;
+}
+
+.border-left {
+    border-left: 5px solid #7E7E7E;
+}
+
+
+
+/*.board {*/
+/*    text-shadow: 1px 1px pink, -1px -1px maroon;*/
+/*    line-height: 1.5em;*/
+/*    text-align: center;*/
+/*    display: inline-block;*/
+/*    width: 4.5em;*/
+/*    height: 4.5em;*/
+/*    border-radius: 50%;*/
+/*    background-color: red;*/
+/*    box-shadow: 0 0.2em maroon;*/
+/*    color: red;*/
+/*    margin: 5px;*/
+/*    background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);*/
+/*    cursor: pointer;*/
+/*    padding-left: 5px;*/
+/*}*/
+
+/*.board:active {*/
+/*    box-shadow: none;*/
+/*    position: relative;*/
+/*    top: 0.2em;*/
+/*}*/
