--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,13 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #627A96 0%, #83B5C5 19.47%, #8DC7D4 39.07%, #93D2DC 82.24%, #95D6DF 100%);
+  font-family: "Helvetica Neue", Helvetica, serif;
+  font-weight: 300;
+  font-size: 1.25rem;
+  color: #201238;
 }
 
 code {
