--- a/src/components/TicTacToe.css
+++ b/src/components/TicTacToe.css
@@ -46,27 +46,31 @@
     border-left: 5px solid #7E7E7E;
 }
 
+.post-game-container {
+    position: fixed;
+    left: 60%;
+    width: 100%;
+    bottom: 0;
+    transform: translate(-50%, 0);
+    margin-bottom: 2rem;
+}
 
+.game-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 1rem;
+    width: 80%;
+    height: 2.5rem;
+    border: none;
+    cursor: pointer;
+    background-color: #201238;
+    color: white;
+    margin: 1rem 0;
+    padding: 0.625rem 1.5rem;
+}
 
-/*.board {*/
-/*    text-shadow: 1px 1px pink, -1px -1px maroon;*/
-/*    line-height: 1.5em;*/
-/*    text-align: center;*/
-/*    display: inline-block;*/
-/*    width: 4.5em;*/
-/*    height: 4.5em;*/
-/*    border-radius: 50%;*/
-/*    background-color: red;*/
-/*    box-shadow: 0 0.2em maroon;*/
-/*    color: red;*/
-/*    margin: 5px;*/
-/*    background-image: linear-gradient(left top, pink 3%, red 22%, maroon 99%);*/
-/*    cursor: pointer;*/
-/*    padding-left: 5px;*/
-/*}*/
-
-/*.board:active {*/
-/*    box-shadow: none;*/
-/*    position: relative;*/
-/*    top: 0.2em;*/
-/*}*/
+.game-button:hover {
+    background-color: #282D4F;
+}
